--- a/service.yaml
+++ b/service.yaml
@@ -15,3 +15,19 @@ spec:
     - port: 8080
       targetPort: 8080
       nodePort: 32000
+      
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins-jnlp
+  namespace: devops-tools
+spec:
+  selector:
+    app: jenkins-server
+  type: ClusterIP
+  ports:
+    - name: jnlp
+      port: 50000
+      targetPort: 50000
